NEWS
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch


rdir 0.0.1
----------------------------------------------------------------

This package is designed to perform operations related to directories and files
on Windows machines.

BUG FIXES

NEW FEATURES

* `WP` added for reorienting Windows path backslashes to forward slashes.

MINOR FEATURES

IMPROVEMENTS

* Removed **reports** dependency.

CHANGES