@@ -1,7 +1,8 @@
 # Generated by roxygen2 (4.1.0): do not edit by hand
 
 S3method(print,path_)
+S3method(print,tree_)
 export(WP)
-export(dir_tree_win)
 export(is.global)
 export(path_)
+export(tree_)
