@@ -1,11 +1,11 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/dir_tree_win.R
-\name{dir_tree_win}
-\alias{dir_tree_win}
+% Please edit documentation in R/tree_.R
+\name{tree_}
+\alias{tree_}
 \title{Generate a Windows Tree}
 \usage{
-dir_tree_win(path = ".", out = NULL, include.files = TRUE,
-  additional = NULL)
+tree_(path = ".", out = NULL, include.files = TRUE, additional = NULL,
+  copy2clip = FALSE)
 }
 \arguments{
 \item{path}{A path to the directory.}
@@ -17,6 +17,8 @@ included.}
 
 \item{additional}{Additonal arguments passed to
 href{https://www.microsoft.com/resources/documentation/windows/xp/all/proddocs/en-us/tree.mspx?mfr=true}{\code{tree}}.}
+
+\item{copy2clip}{logical.  If \code{TRUE} attempts to copy to the clipboard.}
 }
 \description{
 Given a directory, generate a Windows based tree diagram.
